src/objects/Build_Information__c.object
<CustomObject>
    <description>Build Information from Jenkins</description>
    <fields>
        <fullName>Build_Cause__c</fullName>
        <label>Build Cause</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Id__c</fullName>
        <description>Jenkins build id</description>
        <label>Build Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_Url__c</fullName>
        <description>Build url in Jenkins</description>
        <label>Build Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Change_Log__c</fullName>
        <label>Change Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Git_Branch__c</fullName>
        <label>Git Branch</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Git_Commit__c</fullName>
        <label>Git Commit</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Git_Link__c</fullName>
        <formula>Git_Url__c  &amp; &apos;/commits/&apos; &amp; Git_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Git Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Git_Url__c</fullName>
        <label>Git Url</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <description>Name of the Jenkins job</description>
        <inlineHelpText>Name of the Jenkins job</inlineHelpText>
        <label>Job Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Build Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BLD-{00000}</displayFormat>
        <label>Build Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Build Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>